--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,6 +19,9 @@
   <property name="cursor">
    <cursorShape>BlankCursor</cursorShape>
   </property>
+  <property name="mouseTracking">
+   <bool>true</bool>
+  </property>
   <property name="contextMenuPolicy">
    <enum>Qt::DefaultContextMenu</enum>
   </property>
