--- a/picture_gallery.ui
+++ b/picture_gallery.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>gallery_dialog</class>
- <widget class="QDialog" name="gallery_dialog">
+ <class>picture_gallery</class>
+ <widget class="QDialog" name="picture_gallery">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -26,7 +26,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Videos</string>
+        <string>Pictures</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -58,7 +58,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="delete_btn">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -85,7 +85,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Play</string>
+          <string>Show</string>
          </property>
         </widget>
        </item>
