added delete all and fixed bugs

--- a/picture_gallery.ui
+++ b/picture_gallery.ui
@@ -77,6 +77,19 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="delete_all_pb">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Delete All</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="play_btn">
          <property name="minimumSize">
           <size>
